# rust-lbm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  wasm.yml
pages/: index.html
src/: lib.rs  tests.rs
src/geometry/: mod.rs  point_in_shape.rs  shape.rs
src/lbm_app/: cavity.rs  mod.rs  poiseuille.rs  turek.rs  web.rs
src/lbm_core/: boundary_conditions.rs  lattice.rs
src/lbmcore/: boundary_conditions.rs  cavity.rs  constants.rs  lattice.rs  mod.rs  turek.rs
src/render/: mod.rs
