[package]
name = "rust-lbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2.9", features = ["js"] }
macroquad = "0.3.25"
rand = "0.8.5"
ndarray = "0.15.6"
